Added stream & playlist & measurement options

--- a/language/en-GB/en-GB.mod_japlayer.ini
+++ b/language/en-GB/en-GB.mod_japlayer.ini
@@ -1,7 +1,10 @@
 MOD_JAPLAYER="JAPlayer"
 MOD_JAPLAYER_XML_DESCRIPTION="APlayer module for Joomla"
 MOD_JAPLAYER_TITLE_DESC="Music title, author or stream name"
+MOD_JAPLAYER_DESC="Description"
 MOD_JAPLAYER_DESC_DESC="Music title, author or stream description"
+MOD_JAPLAYER_STREAM="Stream"
+MOD_JAPLAYER_STREAM_DESC="Is the music stream or file playlist?"
 MOD_JAPLAYER_SOURCE="Source"
 MOD_JAPLAYER_SOURCE_DESC="Source or file URL"
 MOD_JAPLAYER_AUTOPLAY="Autoplay"
@@ -12,6 +15,8 @@ MOD_JAPLAYER_COLOR="Colour"
 MOD_JAPLAYER_COLOR_DESC="Player body colour"
 MOD_JAPLAYER_PICTURE="Track picture"
 MOD_JAPLAYER_PICTURE_DESC="Cover or logo for the track or source"
+MOD_JAPLAYER_MEASIREMENT="Measurement"
+MOD_JAPLAYER_MEASIREMENT_DESC="System of measurement (in pixels or persents)"
 MOD_JAPLAYER_WIDTH="Width"
 MOD_JAPLAYER_WIDTH_DESC="Player width (in pixels)"
 MOD_JAPLAYER_HEIGHT="Playlist height"
